When an object goes away, remove from queue of pending cache additions

Items are added to the cache in an idle (see commit 75ff19), meaning
that it is possible for an object to go away between the time it is
queued for addition and the time the additions are made.

https://bugzilla.gnome.org/show_bug.cgi?id=666371